# django-kube-actions-app

./: .gitignore  docker-compose.yaml  kube_django.code-workspace  pyproject.toml
.github/workflows/: build.yaml  test-django.yaml
k8s/apps/: django-k8s-web.yaml
web/: build-push-notes.md  deployment-guide.md  migrate.sh  requirements.txt
web/django_k8s/: settings.py  wsgi.py
web/django_k8s/cdn/: conf.py
