[tool.poetry]
name = "kube_django"
version = "0.1.0"
description = ""
authors = ["graystum <graystum.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
gunicorn = "^20.1.0"
boto3 = "^1.20.54"
requests = "^2.27.1"
django-dotenv = "^1.4.2"
django-storages = "^1.12.3"
psycopg2-binary = "^2.9.3"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

